--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Janii</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <form action="">Calculadora de Janii</form>
-    <fieldset>
+    <h2>Calculadora de janni</h2>
         <fieldset>
-            <div class="Calculadora"></div>
-            <div class="Calculadora__display">
-                <input type="text" placeholder="ingrese numeros">
+            <div class="Calculadora"></div><input type="text" placeholder="ingrese numeros">
             </div>
             <div class="Calculadora__Keys">
                 <input type="button" value="1">
@@ -36,8 +34,6 @@
             <div class="nuevo">
                 <input type="button" value="limpiar">
             </div>
-
-        </fieldset>
     </fieldset>   
         
         
